# polymarket

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  approve_usdc.py  backtest_buckets.py  backtest_highx.py  backtest_martingale.py  backtest_offline.py  backtest_sim.py  check_account.py  check_balance.py  check_highx.py  check_key.py  check_markets.py  check_onchain.py  check_order.py  check_pm_positions.py  check_raw.py  config.yaml  diagnose_fast_arb_resolve.py  fetch_data.py  filter_markets.py  oracle_arb_bot.db  pyproject.toml  redeem_pending_fast_arb.py  test_order.py  test_real_15m.py  test_real_kalshi.py
arb_bot/: README.md  __init__.py  __main__.py  config.yaml  db.py  engine.py  kalshi_ws.py  ws.py
bybit-bot/: README.md  config.yaml  requirements.txt
cross_arb_bot/: README.md  __init__.py  __main__.py  config.yaml  db.py  engine.py  kalshi_feed.py  matcher.py  models.py  polymarket_feed.py  watch_runner.py
data/: backtest_markets.json  binance_klines_cache.json  disabled_symbols.json  kalshi_15m_delta.py  kalshi_cbb.json  kalshi_cbb_titles.json  kalshi_example_full.json  kalshi_expiring.json  kalshi_ipl.json  kalshi_ipl_titles.json  kalshi_nba.json  kalshi_nba_titles.json  kalshi_pm_resolution_match.py  kalshi_r6.json  kalshi_r6_example.json  kalshi_r6_titles.json  kalshi_sports.json  kalshi_t20.json  kalshi_t20_titles.json  kalshi_titles.json  oracle_arb_bot.db-journal  pm_cbb.json  pm_cbb_titles.json  pm_example_full.json  pm_ipl.json  pm_ipl_titles.json  pm_nba.json  pm_nba_titles.json  pm_r6.json  pm_r6_example.json  pm_r6_titles.json  pm_sports.json  (+6 more)
(+221 files in other folders)
