[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
requires-python = ">=3.9.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "py-clob-client>=0.15",
    "pyTelegramBotAPI>=4.0",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "cryptography>=42.0",
    "eth-account>=0.13",
    "web3>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "arb_bot*", "cross_arb_bot*", "real_arb_bot*", "volatility_bot*", "oracle_arb_bot*"]
